ui: fix ListTile displaying overflowing text
In case such ListTile does not have an icon -
make sure the icon placeholder takes its width.
Make content container not overflow the actual
ListTile, so that it's Text's apply text overflow.

--- a/ui/src/components/ListTile.css
+++ b/ui/src/components/ListTile.css
@@ -18,12 +18,12 @@
 }
 
 .serio-list-tile-icon-placeholder {
-    width: 24px;
-    height: 24px;
+    color: transparent;
 }
 
 .serio-list-tile-content {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    min-width: 0;
 }
